# django-hybrid-search-example

./: .gitignore  .pre-commit-config.yaml  LICENSE  Multilingual advanced search in Django without cloud.key  README.md  compose.yaml  main.py  pyproject.toml
core/: admin.py  forms.py  models.py  ollama_session.py  readers.py  tools.py  urls.py  views.py  writers.py
core/management/commands/: add_document.py  remove_all_documents.py  update_all_document_sematic_vectors.py
core/migrations/: 0001_add_vector_extension.py  0001_initial.py  0002_initial.py  0003_alter_document_iso_language.py
core/static/css/: REAME.md  pico.min.css
core/templates/core/: home.html
example/: settings.py  urls.py
scripts/: reset_database.py  set_up_project.py
tests/core/: test_ollama_session.py  test_readers.py  test_tools.py  test_writers.py
