[project]
name = "django-hybrid-search-example"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "django>=6.0.4",
    "django-debug-toolbar>=6.3.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "prek>=0.3.9",
    "pytest>=9.0.3",
]


[tool.pytest.ini_options]
addopts = """\
    --maxfail=2
    --strict-config
    --strict-markers
    """
filterwarnings = [
    "default",
    "ignore:.*datetime.datetime.utcnow.. is deprecated",
    "ignore:.*'typing.ByteString' is deprecated",
    "ignore:.*unclosed .socket.socket",  # TODO#984 Remove
]
minversion = "9.0"
testpaths = [
    "tests",
]
DJANGO_SETTINGS_MODULE = "siisurit.settings"

[tool.ruff]
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = [
    # Missing trailing comma → May cause conflicts when used with the formatter.
    "COM812",
    # `import` should be at the top-level of a file
    # NOTE This would choke on manage.py.
    "PLC0415",
    # Too many branches
    "PLR0912",
    # Too many arguments in function definition
    "PLR0913",
    # Too many statements
    "PLR0915",
    # Magic value used in comparison
    "PLR2004",
    # Unneccesarry assign → We regularly use `result = ...; return result` to examine the result in the debugger.
    "RET504",
    # Mutable class attributes should be annotated with `typing.ClassVar`
    "RUF012",
    # Avoid specifying long messages outside the exception class
    "TRY003",
    # Abstract `raise` to an inner function
    "TRY301",
]
select = [
    # flake8-builtins
    "A",
    # flake8-bugbear
    "B",
    # flake8-commas
    "COM",
    # flake8-comprehensions
    "C4",
    # flake8-django
    "DJ",
    # flake8-datetimez
    "DTZ",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
    # flake8-no-pep420
    "INP",
    #  flake8-gettext
    "INT",
    # flake8-logging
    "LOG",
    # perflint
    "PERF",
    # pygrep-hooks
    "PGH",
    # flake8-pie
    "PIE",
    # pylint
    "PL",
    # flake8-use-pathlib
    "PTH",
    # refactor
    "R",
    # flake8-raise
    "RSE",
    # flake8-return
    "RET",
    # ruff specific rules
    "RUF",
    # flake8-self
    "SLF",
    # flake8-simplify
    "SIM",
    # tryceratops
    "TRY",
    # flake8-debugger
    "T10",
    # flake8-print
    "T20",
    # pyupgrade
    "UP",
]

[tool.ruff.lint.isort]
known-first-party = ["example"]
